  in makeTuneControlIrace); default is maximum precision
- for plotting in general we try to introduce a "data layer", so the data can be generated independently
  of the plotting first, into well-defined objects; these can then be plotted with mlr or custom code;
  the naming scheme is always generate<Foo>Data and plot<Foo>
- getFilterValues is deprecated in favor of generateFilterValuesData
- plotFilterValues and  can now plot multiple filter methods using facetting
- plotROCRCurves has been rewritten to use ggplot2
- classif.ada: added "loss" hyperpar
- add missings properties to all ctree and cforest methods:
  regr/classif for ctree, regr/classif/surv for cforest, and regr/classif for blackboost
- learner xgboost was removed, because the package is not on CRAN anymore, unfortunately
- reg.km: added param 'iso'
- classif.mda: added param 'start.method' and changed its default to 'lvq', added params 'sub.df', 'tot.df'
  and 'criterion'.

- new functions
-- getTaskSize
-- getNestedTuneResultsX, getNestedTuneResultsOptPathDf
-- tuneDesign
-- generateROCRCurvesData, generateFilterValuesData, generateLearningCurveData, plotLearningCurve,
   generateThreshVsPerfData, plotThreshVsPerf
-- generateThreshVsPerfData accepts Prediction, ResampleResult, lists of ResampleResult,
   and BenchmarkResult objects.
-- experimental ggvis functions: plotROCRCurvesGGVIS, plotLearningCurveGGVIS,
   plotTuneMultiCritResultGGVIS, plotThreshVsPerfGGVIS, and plotFilterValuesGGVIS

- new learners:
-- classif.bst
-- classif.hdrda
-- classif.nodeHarvest
-- classif.pamr
-- classif.rFerns
-- classif.sparseLDA
-- regr.bst
-- regr.frbs
-- regr.nodeHarvest
-- regr.slim

- new measures:
-- brier

mlr_2.3:
- resample now returns an object of class ResampleResult (downward compatible)
  to allow for a print method.
- resampling on features now supported for an arbitrary number of factor features
- mlr supports ViperCharts plots now