@@ -4,11 +4,24 @@
 \alias{plotThreshVsPerf}
 \title{Plot threshold vs. performance(s) for 2-class classification using ggplot2.}
 \usage{
-plotThreshVsPerf(obj, mark.th = NA_real_)
+plotThreshVsPerf(obj, color = "learner", facet = "measure",
+  mark.th = NA_real_)
 }
 \arguments{
 \item{obj}{[\code{ThreshVsPerfData}]\cr
 Result of \code{\link{generateThreshVsPerfData}}.}
+
+\item{color}{[\code{character(1)}]\cr
+Selects \dQuote{measure} or \dQuote{learner} to be used for coloring the lines and points in the plot.
+A vector cannot be mapped to the color aesthetic and used for facetting.
+The vector mapped to \code{color} must have more than one unique value, otherwise it will
+be ignored. The default is \dQuote{learner}.}
+
+\item{facet}{[\code{character(1)}]\cr
+Selects \dQuote{measure} or \dQuote{learner} to be the facetting variable.
+A vector cannot be mapped to \code{color} and used for facetting.
+The vector mapped to \code{facet} must have more than one unique value, otherwise it will
+be ignored. The default is \dQuote{measure}.}
 
 \item{mark.th}{[\code{numeric(1)}]\cr
 Mark given threshold with vertical line?
