@@ -6,7 +6,7 @@ test_that("generateLearningCurve", {
                                 measures = list(acc, timeboth))
   expect_true(all(c("learner", "perc", "acc", "timeboth") %in% colnames(r$data)))
   plotLearningCurve(r)
-  ## plotLearningCurveGGVIS(r, interactive = TRUE)
+  ## plotLearningCurveGGVIS(r)
 
   r = generateLearningCurveData(learners = list("regr.lm", "regr.svm"),
                                 task = regr.num.task, percs = c(0.1, 0.2),
@@ -14,10 +14,11 @@ test_that("generateLearningCurve", {
                                 measures = list(sse, timeboth))
   expect_true(all(c("learner", "perc", "sse", "timeboth") %in% colnames(r$data)))
   plotLearningCurve(r)
-  ## plotLearningCurveGGVIS(r, interactive = TRUE)
+  ## plotLearningCurveGGVIS(r)
 
   r = generateLearningCurveData(list("classif.rpart", "classif.knn"),
                                 task = binaryclass.task, percs = c(0.1, 0.3),
                                 measures = acc)
-  ## plotLearningCurveGGVIS(r, interactive = TRUE)
+  plotLearningCurve(r)
+  plotLearningCurveGGVIS(r) ## not interactive by default
 })
