@@ -11,7 +11,7 @@ mlr_2.4:
   of the plotting first, into well-defined objects; these can then be plotted with mlr or custom code;
   the naming scheme is always generate<Foo>Data and plot<Foo>
 - getFilterValues is deprecated in favor of generateFilterValuesData
-- plotFilterValues and  can now plot multiple filter methods using facetting
+- plotFilterValues can now plot multiple filter methods using facetting
 - plotROCRCurves has been rewritten to use ggplot2
 - classif.ada: added "loss" hyperpar
 - add missings properties to all ctree and cforest methods:
@@ -20,6 +20,7 @@ mlr_2.4:
 - reg.km: added param 'iso'
 - classif.mda: added param 'start.method' and changed its default to 'lvq', added params 'sub.df', 'tot.df'
   and 'criterion'.
+- plotThreshVsPerf and plotLearningCurve now have params 'color' and 'facet'
 
 - new functions
 -- getTaskSize
